unpackaged/main/default/objects/n2de__Distribution_team_alert__c/n2de__Distribution_team_alert__c.object-meta.xml
<CustomObject>
    <description>Team alerts</description>
    <label>Distribution team alert</label>
    <nameField>
        <label>Alert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distribution team alerts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>