unpackaged/main/default/objects/n2de__Distribution_team_alert__c/fields/n2de__Alert_condition_argument__c.field-meta.xml
<CustomField>
    <fullName>n2de__Alert_condition_argument__c</fullName>
    <label>Alert condition argument</label>
    <length>255</length>
    <type>Text</type>
</CustomField>