unpackaged/main/default/objects/n2de__Distribution_team_alert__c/fields/n2de__Alert_condition_field_name__c.field-meta.xml
<CustomField>
    <fullName>n2de__Alert_condition_field_name__c</fullName>
    <label>Alert condition field name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>