unpackaged/main/default/objects/n2de__Distribution_team_alert__c/fields/n2de__Alert_condition_field_type__c.field-meta.xml
<CustomField>
    <fullName>n2de__Alert_condition_field_type__c</fullName>
    <label>Alert condition field type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>