unpackaged/main/default/objects/n2de__Distribution_team_alert__c/fields/n2de__Alert_condition_operator__c.field-meta.xml
<CustomField>
    <fullName>n2de__Alert_condition_operator__c</fullName>
    <label>Alert condition operator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>equals</fullName>
            </value>
            <value>
                <fullName>not equal</fullName>
            </value>
            <value>
                <fullName>less than</fullName>
            </value>
            <value>
                <fullName>greater than</fullName>
            </value>
            <value>
                <fullName>less or equal</fullName>
            </value>
            <value>
                <fullName>greater or equal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>