unpackaged/main/default/objects/n2de__Distribution_team_alert__c/fields/n2de__Alert_datetime_field__c.field-meta.xml
<CustomField>
    <fullName>n2de__Alert_datetime_field__c</fullName>
    <description>DateTime field used to test if distribution has missed an SLA</description>
    <inlineHelpText>If the DateTime in the field has passed, distribution will be shown as missing an SLA</inlineHelpText>
    <label>Alert datetime field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>