unpackaged/main/default/objects/n2de__Distribution_team_alert__c/fields/n2de__Alert_period__c.field-meta.xml
<CustomField>
    <fullName>n2de__Alert_period__c</fullName>
    <label>Period</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>