unpackaged/main/default/objects/n2de__Distribution_team_alert__c/fields/n2de__Alert_sequence__c.field-meta.xml
<CustomField>
    <fullName>n2de__Alert_sequence__c</fullName>
    <inlineHelpText>SLAs on distribution: If the period of time from distribution has passed and the condition is found to be true an alert will be raised. SLAs must be entered in the sequence they will occur.</inlineHelpText>
    <label>Alert sequence</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>