unpackaged/main/default/objects/n2de__Distribution_team_alert__c/fields/n2de__Alert_unit__c.field-meta.xml
<CustomField>
    <fullName>n2de__Alert_unit__c</fullName>
    <label>Alert unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Minutes</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>