unpackaged/main/default/objects/n2de__Distribution_team_alert__c/fields/n2de__Team__c.field-meta.xml
<CustomField>
    <fullName>n2de__Team__c</fullName>
    <label>Distribution team</label>
    <referenceTo>n2de__Team__c</referenceTo>
    <relationshipLabel>Distribution team alerts</relationshipLabel>
    <relationshipName>Distribution_team_alerts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>